<resources>
    <string name="app_name">TextileMarkeet</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="via">Connect Via</string>
    <string name="sign_up">Sign Up</string>
    <string name="forget_password">Forget password ?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="categories">Categories</string>
    <string name="account">Account</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact us</string>
</resources>
