<LinearLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <include
            android:id="@+id/signin_tool_bar"
            layout="@layout/m_tool_bar"/>

    <ScrollView

            android:id="@+id/sv_form_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/ti_email_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/et_email_signin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="User Name/Phone"
                        android:textSize="14sp"
                        android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/ti_password_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/et_password_signin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:textSize="14sp"
                        android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView

                    android:id="@+id/tv_forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:padding="8dp"
                    android:text="@string/forget_password"
                    android:textAlignment="textEnd"
                    android:textSize="14sp"/>

            <Button

                    android:id="@+id/btn_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/sign_in"
                    android:layout_marginTop="16dp"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white"/>

            <TextView

                    android:id="@+id/tv_connect_via_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/via"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="16dp">

                <FrameLayout

                        android:id="@+id/btn_fb_sign_in"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="8dp"
                        android:clickable="true"
                        android:elevation="4dp"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground">

                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"
                            android:src="@drawable/facebook_icon"/>
                </FrameLayout>

                <FrameLayout

                        android:id="@+id/btn_google_sign_in"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="8dp"
                        android:clickable="true"
                        android:elevation="4dp"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground">

                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"
                            android:src="@drawable/google_icon"/>
                </FrameLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>