<LinearLayout

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <include
            android:id="@+id/signup_tool_bar"
            layout="@layout/m_tool_bar"/>

    <ScrollView

            android:id="@+id/sv_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/ti_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/et_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="User Name"
                        android:textSize="14sp"
                        android:inputType="textPersonName"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/ti_contact_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="11"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/et_contact_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:hint="Mobile Number"
                        android:maxLength="11"
                        android:inputType="numberDecimal"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/ti_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="11"
                    android:padding="4dp"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:hint="Email"
                        android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/ti_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:hint="@string/password"
                        android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/ti_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/et_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button

                    android:id="@+id/btn_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:text="@string/sign_up"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white"/>

            <TextView

                    android:id="@+id/tv_connect_via"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/via"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="16dp">

                <FrameLayout

                        android:id="@+id/btn_fb_sign_up"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="8dp"
                        android:clickable="true"
                        android:elevation="4dp"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground">

                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"
                            android:src="@drawable/facebook_icon"/>
                </FrameLayout>

                <FrameLayout

                        android:id="@+id/btn_google_sign_up"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="8dp"
                        android:clickable="true"
                        android:elevation="4dp"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground">

                    <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY"
                            android:src="@drawable/google_icon"/>
                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
